objects/UPC_ExternalDataInsight__c.object
<CustomObject>
    <fields>
        <fullName>UPC_ExternalCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal company code</label>
        <referenceTo>UPC_ExternalCompanyData__c</referenceTo>
        <relationshipName>UPC_External_Data_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_ExternalErasuerDate__c</fullName>
        <label>Date of erasure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_ExternalUpdateDate__c</fullName>
        <label>Date of update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightCategory__c</fullName>
        <label>Product class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPU</fullName>
                    <label>Host Systems - Server</label>
                </value>
                <value>
                    <fullName>CPC</fullName>
                    <label>PCs - Microcomputer</label>
                </value>
                <value>
                    <fullName>PRT</fullName>
                    <label>Printers</label>
                </value>
                <value>
                    <fullName>STO</fullName>
                    <label>Storage</label>
                </value>
                <value>
                    <fullName>OPR</fullName>
                    <label>Operating Systems</label>
                </value>
                <value>
                    <fullName>PCS</fullName>
                    <label>PC Applications</label>
                </value>
                <value>
                    <fullName>PRG</fullName>
                    <label>Strategical Applications</label>
                </value>
                <value>
                    <fullName>INT</fullName>
                    <label>Internet</label>
                </value>
                <value>
                    <fullName>LAN</fullName>
                    <label>LAN Local Area Networks</label>
                </value>
                <value>
                    <fullName>WAN</fullName>
                    <label>WAN Wide Area Networks</label>
                </value>
                <value>
                    <fullName>TEL</fullName>
                    <label>Voice and Video Systems</label>
                </value>
                <value>
                    <fullName>DBM</fullName>
                    <label>Databases - Application Development</label>
                </value>
                <value>
                    <fullName>SEC</fullName>
                    <label>Security</label>
                </value>
                <value>
                    <fullName>SVC</fullName>
                    <label>IT Services</label>
                </value>
                <value>
                    <fullName>HSR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightCpuCode__c</fullName>
        <label>CPU Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightDetail2__c</fullName>
        <label>Additional information regarding the mat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightDetail__c</fullName>
        <label>Description in English</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightFamily__c</fullName>
        <label>Product family</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightModel__c</fullName>
        <label>Material code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightRemoteFlag__c</fullName>
        <label>Remote-local-Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightSpecUn__c</fullName>
        <label>Special unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsightVendor__c</fullName>
        <label>Producer</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_CodeServer__c</fullName>
        <label>Code Server</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Server</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>Non Server</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_Dedicated__c</fullName>
        <label>Type of server (LAN/WEB)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_Installdate__c</fullName>
        <label>Date of installation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_Memo__c</fullName>
        <label>Memo 1</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_ProjectDate__c</fullName>
        <label>Date of project</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_ProjectManager__c</fullName>
        <label>Project Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_ProjectPhase__c</fullName>
        <label>Phase of project</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_Project__c</fullName>
        <label>Project</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ProductInsight_Qty__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ProduicInsightSpecVal__c</fullName>
        <label>Special value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>External Data Insight</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPC_ProductInsightCategory__c</columns>
        <columns>UPC_ProductInsightFamily__c</columns>
        <columns>UPC_ProductInsightVendor__c</columns>
        <columns>UPC_ProductInsightDetail__c</columns>
        <columns>UPC_ProductInsight_CodeServer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal product code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Data Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>